0.7.0/_sources/community/team.md
# About the project and team

napari is a consensus-based community project. Anyone with an interest in the project can join the community, contribute to the project design, and participate in the decision making process. You can learn more about how the project is run by reading our [governance model](napari-governance). This page lists our current and emeritus [core team members](governance.md#core-team-members). Core team members are community members that have demonstrated a sustained commitment to the project through ongoing contributions and that they can maintain napari with care. We also list our current and emeritus steering council members. Finally, the project currently has a number of paid team members in various roles supported by grants. They are listed below under the [Team Roles](#team-roles) section

## Current Core Team Members

- [Ashley Anderson](https://github.com/napari/napari/commits?author=aganders3) - [@aganders3](https://github.com/aganders3)
- [Draga Doncila Pop](https://github.com/napari/napari/commits?author=DragaDoncila) - [@DragaDoncila](https://github.com/DragaDoncila)
- [Genevieve Buckley](https://github.com/napari/napari/commits?author=GenevieveBuckley) - [@GenevieveBuckley](https://github.com/GenevieveBuckley)
- [Grzegorz Bokota](https://github.com/napari/napari/commits?author=Czaki) - [@Czaki](https://github.com/Czaki)
- [Jaime Rodríguez-Guerra](https://github.com/napari/napari/commits?author=jaimergp) - [@jaimergp](https://github.com/jaimergp)
- [Juan Nunez-Iglesias](https://github.com/napari/napari/commits?author=jni) - [@jni](https://github.com/jni)
- [Kevin Yamauchi](https://github.com/napari/napari/commits?author=kevinyamauchi) - [@kevinyamauchi](https://github.com/kevinyamauchi)
- [Kira Evans](https://github.com/napari/napari/commits?author=kne42) - [@kne42](https://github.com/kne42)
- [Kyle Harrington](https://github.com/napari/napari/commits?author=kephale) - [@kephale](https://github.com/kephale)
- [Lorenzo Gaifas](https://github.com/napari/napari/commits?author=brisvag) - [@brisvag](https://github.com/brisvag)
- [Melissa Weber Mendonça](https://github.com/napari/napari/commits?author=melissawm) - [@melissawm](https://github.com/melissawm)
- [Peter Sobolewski](https://github.com/napari/napari/commits?author=psobolewskiPhD) - [@psobolewskiPhD](https://github.com/psobolewskiPhD)
- [Tim Monko](https://github.com/napari/napari/commits?author:timmonko) - [@TimMonko](https://github.com/TimMonko)
- [Wouter-Michiel Vierdag](https://github.com/napari/napari/commits?author=melonora) - [@melonora](https://github.com/melonora)
- [Carol Willing](https://github.com/napari/napari/commits?author=willingc) - [@willingc](https://github.com/willingc)

## Emeritus Core Team Members

- [Ahmet Can Solak](https://github.com/napari/napari/commits?author=AhmetCanSolak) - [@AhmetCanSolak](https://github.com/AhmetCanSolak)
- [Alister Burt](https://github.com/napari/napari/commits?author=alisterburt) - [@alisterburt](https://github.com/alisterburt)
- [Andy Sweet](https://github.com/napari/napari/commits?author=andy-sweet) - [@andy-sweet](https://github.com/andy-sweet)
- [Justine Larsen](https://github.com/napari/napari/commits?author=justinelarsen) - [@justinelarsen](https://github.com/justinelarsen)
- [Loic Royer](https://github.com/napari/napari/commits?author=royerloic) - [@royerloic](https://github.com/royerloic)
- [Lucy Liu](https://github.com/napari/napari/commits?author=lucyleeow) - [@lucyleeow](https://github.com/lucyleeow)
- [Nicholas Sofroniew](https://github.com/napari/napari/commits?author=sofroniewn) - [@sofroniewn](https://github.com/sofroniewn)
- [Shannon Axelrod](https://github.com/napari/napari/commits?author=shanaxel42) - [@shanaxel42](https://github.com/shanaxel42)
- [Talley Lambert](https://github.com/napari/napari/commits?author=tlambert03) - [@tlambert03](https://github.com/tlambert03)
- [Ziyang Liu](https://github.com/napari/napari/commits?author=potating-potato) - [@potating-potato](https://github.com/potating-potato)

## Current Steering Council Members

- [Draga Doncila Pop](https://github.com/napari/napari/commits?author=DragaDoncila) - [@DragaDoncila](https://github.com/DragaDoncila)
- [Juan Nunez-Iglesias](https://github.com/napari/napari/commits?author=jni) - [@jni](https://github.com/jni)
- [Kevin Yamauchi](https://github.com/napari/napari/commits?author=kevinyamauchi) - [@kevinyamauchi](https://github.com/kevinyamauchi)
- [Kyle Harrington](https://github.com/napari/napari/commits?author=kephale) - [@kephale](https://github.com/kephale)

## Emeritus Steering Council Members

- [Loic Royer](https://github.com/napari/napari/commits?author=royerloic) - [@royerloic](https://github.com/royerloic)
- [Nicholas Sofroniew](https://github.com/napari/napari/commits?author=sofroniewn) - [@sofroniewn](https://github.com/sofroniewn)
- [Talley Lambert](https://github.com/napari/napari/commits?author=tlambert03) - [@tlambert03](https://github.com/tlambert03)

# Team Roles

To best serve napari's development, operations, and community, several team roles are contracted. Currently contracted roles are listed below:

- Developers-in-Residence: Grezgorz Bokota, Lorenzo Gaifas, Draga Doncila Pop
- Community Managers: Tim Monko, Lorenzo Gaifas
- Operations Manager: Draga Doncila Pop
- Release Manager: Rotating role. For current release manager see the Zulip [#release](https://napari.zulipchat.com/#narrow/channel/215289-release) channel.

We are also contracting with [Quansight](https://quansight.com/) for some key maintenance items:

- [Melissa Weber Mendonça](https://github.com/melissawm) is working on auto-generating videos and screenshots for our documentation and other documentation maintenance & improvements
- [Jaime Rodríguez-Guerra](https://github.com/jaimergp) is working on maintaining and improving our bundled application and the `napari-plugin-manager`
- [Daniel Althviz Moré](https://github.com/dalthviz) is working on refactoring our layer controls implementation, improving the `napari-plugin-manager`, and migrating our application model to `app-model`

## Project history

The napari project began in the spring of 2018. It was born out of the shared need for fast n-dimensional image viewing in Python by project co-founders Loïc Royer, from the Chan Zuckerberg Biohub (CZ Biohub), and Juan Nunez-Iglesias, from Monash University. Since then it has grown rapidly to now also provide a graphical user interface to a plugin ecosystem of image analysis tools for scientists to use in their daily work.

Named after the tiny village of Napari, in the Republic of Kiribati in the Pacifc Ocean, at the geographic midpoint between Loïc's home of San Francisco and Juan’s home of Melbourne, the napari project has, from its inception, been a global community effort.

Early development on the project was led by Kira Evans, first as an intern with Loïc at CZ Biohub, then later as a software engineer at the Chan Zuckerberg Initiative (CZI). Nicholas Sofroniew (CZI) joined in the fall of 2018, accelerating both the organization and management of the growing team, as well as the development of core features.

You can read a full history of the project’s founding and early development in this [blog post](https://ilovesymposia.com/2019/10/24/introducing-napari-a-fast-n-dimensional-image-viewer-in-python/) from Juan.

Over time, napari has grown to over 180 direct contributors. Talley Lambert,
from Harvard Medical School, began contributing around the time of Juan's blog
post, and has been a critical driver of napari's development, including
development of its first and second (current) plugin systems.

We now have core team members located in four continents and three
fortnightly community calls spread across the day to accommodate users
and contributors in any time zone.

Read more about napari’s [mission and values](mission-and-values), how to get
started as a [contributor](napari-contributing) or join us in our
[public chat room](https://napari.zulipchat.com/login/). You can also follow us
on [mastodon](https://fosstodon.org/@napari),
[Bluesky](http://bsky.app/profile/napari.org), or
[LinkedIn](https://www.linkedin.com/company/napari).

(funding)=

## Institutional and funding partners

napari is developed by a global community of scientists, with many working as
volunteers, improving napari for their own use while sharing their work with
the world. We appreciate their efforts!

We have also received generous direct funding and in-kind support that
enables us to develop faster:

- The [Chan Zuckerberg Initiative](https://chanzuckerberg.com/science) has long supported napari in numerous ways
  (listed in reverse chronological order):

  - CZI is currently supporting napari with a grant for scaffolding
    sustainability of the project (2025-2028, \$1.7m)
  - CZI is currently supporting napari with a grant to seed [sustainability]
    of the project (2022-2025, \$200,0000).
  - CZI is matching funds donated to the project up to \$100,000.
  - The CZI Imaging Tech team, in an effort led by Justin Kiggins, developed
    and maintained the original version of [napari-hub], which helps users
    discover napari plugins (2021-2025).
  - CZI funded [two grant rounds][napari-plugin-grants] to support the napari
    community in developing and maintaining plugins (2021, 2022).
  - The CZI Imaging Tech team, led by Nick Sofroniew and Justine Larsen,
    contributed development and design effort for the project (2019-2023) and
    funded contributors at [Quansight Labs](https://labs.quansight.org)
    to work for the project (2021-2023).
  - napari co-founder Juan Nunez-Iglesias has been supported by a
    CZI Imaging Software Fellowship (2018-2025)

- [NumFOCUS](https://numfocus.org) serves as the fiscal home of the napari project. As part of this
  fiscal sponsorship, NumFOCUS provides Small Development Grants for napari,
  funding current efforts to improve handling of physical units.

As described in our [governance](governance) document, project supporters are
represented by a seat on the napari steering council. The current
representative of the napari Institutional and Funding Partners is Kyle I. S.
Harrington (CZI).

If you or your organization are interested in also supporting the napari project and becoming an Institutional and Funding Partner, please email the napari steering council at `napari-steering-council@googlegroups.com`.

[napari-hub]: https://napari-hub.org
[napari-plugin-grants]: https://chanzuckerberg.com/rfa/napari-plugin-grants/
[sustainability]: https://chanzuckerberg.com/science/programs-resources/imaging/napari/seeding-sustainability-for-the-napari-project/
